--- a/src/pages/Cats/Cats.scss
+++ b/src/pages/Cats/Cats.scss
@@ -1,12 +1,18 @@
-.container-cats-list {
+.container-cats {
+  height: 90vh;
   display: flex;
-  justify-content: center;
   align-items: center;
-  height: 100%;
 
-  img {
-    width: 100%;
+  .container-cats-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 100%;
-    object-fit: cover;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
   }
 }
